--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,11 +14,11 @@
 
         <p>Dosya</p>
         <form action="/classification" 
-                    enctype="multipart/form-data"
-                    method="POST">
+                    method="POST"
+                    enctype="multipart/form-data">
             
             <label class="drop-container">
-                <input type="file" required>
+                <input type="file" name="dataset" required>
             </label>
             
             <p>Algoritma</p>
@@ -27,7 +27,7 @@
                 <p>K-NN</p>
             </div>
             
-            <button class="btn-learning">Öğret</button>
+            <button type="submit" class="btn-learning">Öğret</button>
         </form>
 
         
