--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ input[type=file] {
 input[type=file]::-webkit-file-upload-button {
     background: rgb(9, 128, 76);
     height: 100%;
-    border-radius: 9px 0 0 9px;
+    border-radius: 10px 0 0 10px;
     border: none;
     width: 25%;
     cursor: pointer;
@@ -77,4 +77,30 @@ input[type=file]::-webkit-file-upload-button:hover {
     color: rgb(255, 255, 255);
     background-color: rgb(17, 97, 73);
     box-shadow: rgb(19 170 82 / 40%) 0px 2px 3px, rgb(195 231 202) 0px 0px 0px 3px;
+}
+
+.result {
+    display: flex; 
+    justify-content: space-between;
+}
+
+.result-bar {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #333;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.result-bar .result-acc {
+    height: 100%;
+    background: rgb(9, 128, 76);
+    border-radius: 10px 0 0 10px;
+}
+
+.result-bar .result-mse {
+    height: 100%;
+    background: rgb(194, 35, 35);
+    border-radius: 0 10px 10px 0;
 }
