--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,26 +12,30 @@
     <div class="area">
         <h2 class="title">Sınıflandırma</h2>
 
-        <p>Dosya</p>
-        <form action="/classification" 
-                    method="POST"
+        <form action="/classification" method="POST"
                     enctype="multipart/form-data">
             
+            <p>Dosya</p>
             <label class="drop-container">
                 <input type="file" name="dataset" required>
             </label>
+
+            <p>Algoritma</p>
+            <select id="algorithm" name="algorithm">
+                <option value="knn">Sınıflandırma</option>
+                <option value="saab">Regresyon</option>
+            </select>
             
             <p>Algoritma</p>
-            
-            <div class="algorithm">
-                <p>K-NN</p>
-            </div>
+            <select id="algorithm" name="algorithm">
+                <option value="knn">K-NN</option>
+                <option value="saab">Saab</option>
+            </select>
             
             <button type="submit" class="btn-learning">Öğret</button>
         </form>
         
         <h2 class="title">Sonuç</h2>
-
         <div class="result">
             <span><%=acc%>%</span>
             <span><%=mse%>%</span>
